DOXYGEN_FILES = doxygen/Doxyfile doxygen/Makefile doxygen/programmer_manual.doxygen doxygen/README \
	doxygen/images/BEViewer_blank.eps doxygen/images/BEViewer_blank.png

EXTRA_DIST = crash_diagnosis1.txt crash_diagnosis2.txt\
	 bulk_extractor.html bulk_extractor_paper.pdf bulk_extractor_slides.pdf\
	debugging_performance_problems.html $(DOXYGEN_FILES)
